--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
     <br/>
     <div class="box">
         <span class="right">Sep 2018 - Present</span>
-        <span class="left"><b><a href="project/alzheimers-analysis/alzheimers-analysis.html" target="_blank"> Image and Graph Analysis for Alzheimer’s Disease </a> | Mass General Hospital </b> | Research Assistant | </span>
+        <span class="left"><b><a href="project/MCI-analysis/MCI-analysis.html" target="_blank"> Image and Graph Analysis for Mild Cognitive Impairment </a> | Mass General Hospital </b> | Research Assistant | </span>
         <br/>
         <span class="text">Advisor: <b><a href="http://gordon.mgh.harvard.edu/gc/people/faculty/quanzheng-li/" target="_blank">Quanzheng Li</a></b>, associate professor at Harvard Medical School, Harvard University. </span>
         <ul>
-            <li> Explored multi-layer graph learning methods for our AD brain dataset with multiple views including fMRI and DTI;</li>
-            <li> Used pretrained Inception V3 CNN on PET images to classify NC group and MCI group with very high accuracy (~97%);</li>
+            <li> Explored multi-layer graph learning methods for our ADNI brain dataset with multiple views including fMRI and DTI;</li>
+            <li> Used pretrained Inception V3 CNN on PET images to classify NC group and MCI group with very high accuracy (~96%);</li>
             <li> Currently designing experiments to stress the importance of pretraining on both graph-based tasks and image-based tasks.</li>
         </ul>
     </div>
