--- a/project/MCI-analysis/MCI-analysis.html
+++ b/project/MCI-analysis/MCI-analysis.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="../../CSS/main.css">
-	<title>Graph-based Alzheimer's Disease Analysis with PET images</title>
+	<title>Graph-based MCI Analysis with PET images</title>
 	<meta charset="utf-8">
     <script type="text/x-mathjax-config">
   MathJax.Hub.Config({
